dcheck_always_on = false
is_debug = false
target_cpu = "arm64"

# Additional command-line args:
target_os="linux"
target_cpu="arm64"
v8_target_cpu="arm64"
v8_enable_future=true
is_official_build=false
is_component_build=false
is_cfi=false
is_asan=false
is_clang=true
use_custom_libcxx=false
use_custom_libcxx_for_host=false
use_sysroot=true
use_gold=false
is_debug=false
treat_warnings_as_errors=false
v8_enable_i18n_support=true
symbol_level=0
v8_static_library=true
v8_monolithic=true
proprietary_codecs=false
toolkit_views=false
use_aura=false
use_dbus=false
use_gio=false
use_glib=false
use_ozone=false
use_udev=false
clang_use_chrome_plugins=false
v8_deprecation_warnings=false
v8_enable_gdbjit=false
v8_imminent_deprecation_warnings=false
v8_scriptormodule_legacy_lifetime=true
v8_enable_sandbox=false
use_dummy_lastchange=true
use_debug_fission=false
v8_enable_snapshot_compression=false
v8_enable_javascript_promise_hooks=true
v8_promise_internal_field_count=1
v8_enable_handle_zapping=false
v8_typed_array_max_size_in_heap=0
v8_enable_shared_ro_heap=false
v8_enable_verify_heap=false
v8_enable_pointer_compression=true
# v8_enable_maglev=false
v8_use_external_startup_data=false
#v8_use_snapshot=true
#v8_enable_private_mapping_fork_optimization=true
# v8_disable_write_barriers=true
v8_monolithic=true
v8_enable_builtins_optimization=true
