clang_use_chrome_plugins=false
dcheck_always_on = false
enable_rust=false
is_clang=true
is_component_build=false
is_debug=false
strip_debug_info=true
symbol_level=0
target_cpu = "x64"
target_os="mac"
target_sysroot_dir=""
treat_warnings_as_errors=false
use_custom_libcxx=false
use_rtti=false
use_sysroot=false
v8_deprecation_warnings=false
v8_enable_builtins_optimization=true
v8_enable_gdbjit=false
v8_enable_i18n_support=false
v8_enable_pointer_compression=false
v8_enable_sandbox=false
v8_enable_snapshot_compression=false
v8_enable_temporal_support=false
v8_enable_test_features=false
v8_imminent_deprecation_warnings=false
v8_monolithic=true
v8_target_cpu="x64"
v8_use_external_startup_data=false
#v8_deprecation_warnings=false
#v8_disable_write_barriers=true
#v8_enable_builtins_optimization=true
#v8_enable_handle_zapping=false
#v8_enable_javascript_promise_hooks=true
#v8_enable_private_mapping_fork_optimization=true
#v8_enable_sandbox=false
#v8_enable_shared_ro_heap=false
#v8_enable_snapshot_compression=false
#v8_enable_verify_heap=false
#v8_imminent_deprecation_warnings=false
#v8_pointer_compression_shared_cage=false
#v8_promise_internal_field_count=1
#v8_runtime_call_stats=false
#v8_typed_array_max_size_in_heap=0
#v8_use_snapshot=true