clang_use_chrome_plugins=false
dcheck_always_on=false
enable_rust=false
is_cfi=false
is_asan=false
is_clang=true
is_component_build=false
is_debug=false
strip_debug_info=true
symbol_level=0
target_cpu="x64"
target_os="mac"
target_sysroot_dir=""
treat_warnings_as_errors=false
use_custom_libcxx=false
use_rtti=false
use_sysroot=false
v8_deprecation_warnings=false
v8_enable_temporal_support=false
v8_imminent_deprecation_warnings=false
v8_monolithic=true
v8_target_cpu="x64"
v8_use_external_startup_data=false
v8_enable_gdbjit=false
v8_enable_i18n_support=false
v8_enable_pointer_compression=false
v8_enable_sandbox=false
v8_enable_test_features=false
mac_sdk_path="/Applications/Xcode_15.4.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX15.4.sdk"
